--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -71,6 +71,12 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 		</dependency>
