--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=devspring.datasource.platform=oracle
+spring.datasource.initialize=false
+
+spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1521:xe
+spring.datasource.username=yewu
+spring.datasource.password=yewu1688
+spring.datasource.initialSize=1
+spring.datasource.minIdle=1
+spring.datasource.maxActive=20
+spring.datasource.maxWait=60000
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.filters=stat
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
