--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.datasource.filters=stat
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.hibernate.default_schema=SANJI
