--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=devspring.datasource.platform=oracle
+spring.profiles.active=dev
+spring.datasource.platform=oracle
 spring.datasource.initialize=false
 
 spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1521:xe
