--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.datasource.filters=stat
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.hibernate.default_schema=SANJI
+
+
+server.port=8082
