--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.platform=oracle
 spring.datasource.initialize=false
 
 spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:xe
-spring.datasource.username=yewu
-spring.datasource.password=yewu1688
+spring.datasource.username=sj_yewu
+spring.datasource.password=sj_yewu1688
 spring.datasource.initialSize=1
 spring.datasource.minIdle=1
 spring.datasource.maxActive=20
