--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -19,6 +19,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<shiro.version>1.2.4</shiro.version>
+		<start-class>com.wangge.AppServerApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -130,15 +131,6 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
-			<version>2.1.5</version>
 		</dependency>
 	</dependencies>
 
