--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -132,6 +132,11 @@
 			<artifactId>guava</artifactId>
 
 		</dependency>
+		<dependency>
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
+			<version>2.1.5</version>
+		</dependency>
 	</dependencies>
 
 
