--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.initialize=false
 
 #spring.datasource.url=jdbc:oracle:thin:@115.28.92.73:1521:xe
 #spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:xe
-spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:sanjiDB
+#spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:sanjiDB
+spring.datasource.url=jdbc:oracle:thin:@115.28.64.224:1521:sanjiDB
 spring.datasource.username=sj_yewu
 spring.datasource.password=sj_yewu1688
 spring.datasource.initialSize=1
@@ -19,6 +20,8 @@ spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat
+
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
