--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -147,6 +147,10 @@
 			<artifactId>telnetd-x</artifactId>
 			<version>2.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+		</dependency>
 	</dependencies>
 
 
