--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -151,6 +151,11 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
 	</dependencies>
 
 
