--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.datasource.platform=oracle
 spring.datasource.initialize=false
 
 #spring.datasource.url=jdbc:oracle:thin:@115.28.92.73:1521:xe
-spring.datasource.username=sj_buzmgt
-spring.datasource.password=sj_buzmgt1688
+#spring.datasource.username=sj_buzmgt
+#spring.datasource.password=sj_buzmgt1688
 #spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:xe
 #spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:sanjiDB
 spring.datasource.url=jdbc:oracle:thin:@115.28.64.224:1521:sanjiDB
-spring.datasource.username=sj_buzmgt
-spring.datasource.password=sj_buzmgt1688
+spring.datasource.username=sj_yewu
+spring.datasource.password=sj_yewu1688
 
 spring.datasource.initialSize=1
 spring.datasource.minIdle=1
