--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -156,6 +156,10 @@
 			<artifactId>xalan</artifactId>
 			<version>2.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-remote-shell</artifactId>
+		</dependency>
 	</dependencies>
 
 
