--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -93,7 +93,13 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.6</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+		
 		<dependency>
 		    <groupId>cn.jpush.api</groupId>
 		    <artifactId>jpush-client</artifactId>
