--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.filters=stat
 
 
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-server.port=8818
+server.port=8082
