--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -27,9 +27,11 @@ spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.filters=stat
 
-
+spring.view.prefix=/WEB-INF/jsps/
+spring.view.suffix=.jsp
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
 
 server.port=8082
