--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -31,3 +31,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 server.port=8082
+
+app-interface.url=http://192.168.2.151:8080/v1/
