--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -133,7 +133,13 @@
 			<artifactId>bsf</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-
+		
+		<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.4.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
