--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -20,6 +20,8 @@
 		<java.version>1.8</java.version>
 		<shiro.version>1.2.4</shiro.version>
 		<start-class>com.wangge.AppServerApplication</start-class>
+		<commons-collections.version>3.2.2</commons-collections.version>
+		<springfox-swagger2.version>2.5.0</springfox-swagger2.version>
 	</properties>
 	<dependencies>
 		<!-- shiro -->
@@ -96,6 +98,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>${commons-collections.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
@@ -120,6 +128,18 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.4</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+
+		<!-- 添加Swagger2依赖,用于生成接口文档 -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox-swagger2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox-swagger2.version}</version>
 		</dependency>
 
 		<dependency>
