--- a/app-server/src/main/resources/application.properties
+++ b/app-server/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.profiles.active=dev
 spring.datasource.platform=oracle
 spring.datasource.initialize=false
 
-#spring.datasource.url=jdbc:oracle:thin:@115.28.92.73:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@115.28.92.73:1521:xe
 #spring.datasource.username=sj_buzmgt
 #spring.datasource.password=sj_buzmgt1688
 #spring.datasource.url=jdbc:oracle:thin:@192.168.2.190:1522:xe
 #spring.datasource.url=jdbc:oracle:thin:@192.168.2.247:1522:sanjiDB
-spring.datasource.url=jdbc:oracle:thin:@115.28.64.224:1521:sanjiDB
+#spring.datasource.url=jdbc:oracle:thin:@115.28.64.224:1521:sanjiDB
 spring.datasource.username=sj_buzmgt
 spring.datasource.password=sj_buzmgt1688
 
@@ -31,3 +31,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 server.port=8082
+
+mall.url =mail.3j168.cn/
