--- a/app-server/pom.xml
+++ b/app-server/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>com.wangge</groupId>
 		<artifactId>parent</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>1.0.0-RELEASE</version>
 	</parent>
 
 	<properties>
